--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.javax.servlet.jsp.jstl-1.2.1.jar=javax.servlet.jsp.jstl-1.2.1.jar
+file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar=javax.servlet.jsp.jstl-api-1.2.1.jar
 file.reference.mysql-connector-java-5.1.34-bin.jar=/home/danieljunior/NetBeansProjects/fj21-jdbc/mysql-connector-java-5.1.34-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +47,9 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.34-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.34-bin.jar}:\
+    ${file.reference.javax.servlet.jsp.jstl-1.2.1.jar}:\
+    ${file.reference.javax.servlet.jsp.jstl-api-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
