--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=/home/danieljunior/.netbeans/8.0.2/tomcat80.properties
+deploy.ant.properties.file=/home/danieljr/.netbeans/8.0.1/tomcat80.properties
 j2ee.server.domain=/home/danieljunior/.netbeans/8.0.2/apache-tomcat-8.0.15.0_base
-j2ee.server.home=/home/danieljunior/apache-tomcat-8.0.15
-j2ee.server.instance=tomcat80:home=/home/danieljunior/apache-tomcat-8.0.15:base=apache-tomcat-8.0.15.0_base
+j2ee.server.home=/home/danieljr/apache-tomcat-8.0.20
+j2ee.server.instance=tomcat80:home=/home/danieljr/apache-tomcat-8.0.20
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/home/danieljunior/.netbeans/8.0.2/build.properties
+user.properties.file=/home/danieljr/.netbeans/8.0.1/build.properties
